--- a/components/IssueListItem.module.scss
+++ b/components/IssueListItem.module.scss
@@ -1,5 +1,16 @@
 .container {
   height: 2rem;
   background-color: white;
-  margin-bottom: 1px;
+  cursor: pointer;
+  align-items: center;
+  &:hover {
+    background-color: whitesmoke;
+  }
+}
+
+.avatar {
+  img {
+    height: 2rem;
+    width: auto;
+  }
 }
