--- a/components/SuggestInput.module.scss
+++ b/components/SuggestInput.module.scss
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   background-color: inherit;
+  width: 100%;
 }
 
 .input {
@@ -10,5 +11,5 @@
   border: none;
   text-align: center;
   padding: 0.5rem;
-  // width: 30%;
+  width: 100%;
 }
