--- a/components/SearchPanel.module.scss
+++ b/components/SearchPanel.module.scss
@@ -7,7 +7,7 @@
   // margin: .5rem;
   background-color: whitesmoke;
   max-width: 100vw;
-  overflow: hidden;
+  // overflow: hidden;
   padding: 0 0.5rem;
 }
 
