--- a/components/SuggestInput.module.scss
+++ b/components/SuggestInput.module.scss
@@ -13,3 +13,23 @@
   padding: 0.5rem;
   width: 100%;
 }
+
+.suggestionsContainer {
+  position: relative;
+  width: 100%;
+  height: 50%;
+  .suggestions {
+    border: 1px solid lightgray;
+    width: 100%;
+    position: absolute;
+    background-color: white;
+    div {
+      padding: 2px 5px;
+      cursor: pointer;
+      font-size: 90%;
+      &:hover {
+        background-color: lightgray;
+      }
+    }
+  }
+  }
